--- a/LR3/LR3.csproj
+++ b/LR3/LR3.csproj
@@ -54,8 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UsersClasses\InfoEmailSending.cs" />
+    <Compile Include="UsersClasses\EmailsTypes.cs" />
+    <Compile Include="UsersClasses\InfoEmail.cs" />
+    <Compile Include="UsersClasses\InfoGMail.cs" />
+    <Compile Include="UsersClasses\InfoMailRu.cs" />
     <Compile Include="UsersClasses\SendingEmail.cs" />
+    <Compile Include="UsersClasses\StringPair.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
